fix: dark mode color

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 }
 
 .dark {
-    background-color: #2F3438;
+    background-color: #191919;
 }
 
 .light {
